# MathWizApp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docker/: Dockerfile  README.md  docker-compose.yml
include/: ErrorHandler.h  ResultFormatter.h  VariableHandler.h  VariableTableBuilder.h
src/: ErrorHandler.cpp  ResultFormatter.cpp  VariableHandler.cpp  VariableTableBuilder.cpp  main.cpp
